--- a/static/styles/estilos.css
+++ b/static/styles/estilos.css
@@ -57,3 +57,54 @@ a {
     width: 49%;
     height: 50%;
 }
+.center_horizontal {
+
+				text-align: center;
+				margin-left: auto;
+				margin-right: auto;
+			}
+
+			.center_vertical {
+				position: relative;
+			  top: 40%;
+			  -ms-transform: translateY(-50%);
+			  transform: translateY(-50%);
+			  background: pink;
+			}
+
+			.container_multiple_box {
+
+				width: 100%;
+				display: flex;
+
+			}
+
+			.box_inside {
+				width: 80%;
+				display: inline;
+			}
+
+			.container_vertical_align {
+
+			    height: 200px;
+			}
+
+			.news {
+			    border: 1px solid black;
+			    width: 20%;
+			    height: 400px;
+				display: inline;
+				overflow: scroll;
+			}
+
+			.div_new {
+
+			    margin-left: 1px;
+			    margin-right: 1px;
+			    margin-bottom: 5px;
+
+			    width: 100%;
+			    border: 1px solid gray;
+			    display: block;
+
+			}
