--- a/templates/module_home/index.html
+++ b/templates/module_home/index.html
@@ -110,7 +110,7 @@
 </div>
 
 <!-- User Favorite Category -->
-
+{% if cat %}
 <div class="container text-center">
     <h3 class="mb-2 "><strong>Your Favorite Category</strong></h3>
     <div class="row">
@@ -124,7 +124,7 @@
         </div> 
       </div>
   </div>
-
+{% endif %}
 
 {% endif %}
 
