--- a/templates/module_home/product.html
+++ b/templates/module_home/product.html
@@ -45,14 +45,14 @@
 </div>
 
 
-{% if not logged_in %}
+
 <div class="container mb-5">
     <h3 class="mb-2"><strong>Similar Products</strong></h3>
     <div class="row">
         {% for x in similar %}
         <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="shop-item">
-                <a href="/product?view={{x.id_product}}"><img width="223px"
+                <a href="/product?view={{x.id_product}}"><img height="140px" width="223px"
                         src={{ url_for('static', filename = '') }}{{x.img_path}}></a>
                 <div>
                     <a href="/product?view={{x.id_product}}">{{x.name}}</a>
@@ -74,11 +74,12 @@
         {% endfor %}
     </div>
 </div>
-{% else %}
 
-<!--Similar products personalized-recommendations-->
+{% if logged_in %}
+
+<!--Similar products-->
 <div class="container mb-5">
-    <h3 class="mb-2"><strong>Similar products for you</strong></h3>
+    <h3 class="mb-2"><strong>Other products recommended for you</strong></h3>
     <div class="row">
         {% for x in recp %}
         <div class="col-md-4 col-sm-6 col-xs-12">
@@ -107,7 +108,7 @@
 
 <!--Similar products group-based -->
 <div class="container mb-5">
-    <h3 class="mb-2"><strong>Similar products based on your location</strong></h3>
+    <h3 class="mb-2"><strong>Recommendations based on your location</strong></h3>
     <div class="row">
         {% for x in recg %}
         <div class="col-md-4 col-sm-6 col-xs-12">
