--- a/templates/module_home/search.html
+++ b/templates/module_home/search.html
@@ -43,7 +43,7 @@
 
 <!-- Personalized Recommendations -->
 <div class="container mb-5">
-    <h3 class="mb-2"><strong>Recommended for you</strong></h3>
+    <h3 class="mb-2"><strong>Other products recommended for you</strong></h3>
     <div class="row">
       {% for x in recp %}
       <div class ="col-md-4 col-sm-6 col-xs-12">
@@ -73,7 +73,7 @@
 <!-- Group Recommendations -->
 
 <div class="container mb-5">
-    <h3 class="mb-2"><strong>Based on your location</strong></h3>
+    <h3 class="mb-2"><strong>Recommendations based on your location</strong></h3>
     <div class="row">
       {% for x in recg %}
       <div class ="col-md-4 col-sm-6 col-xs-12">
